--- a/FrontendCNE/FrontendCNE/Views/DepartamentoController1/Index.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/DepartamentoController1/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@model IEnumerable<FrontendCNE.Models.DepartamentoViewModel>
 
-@{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewData["Title"] = "Index";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <h1>Departamentos</h1>
 
 <p>
     <button class="btnCreate btn btn-primary">Nuevo</button>
 </p>
-<table class="table table-striped table-hover table-bordered" id="myTable">
+<table class="table table-striped table-hover" id="myTable">
     <thead>
         <tr>
             <th>
@@ -19,34 +17,93 @@
             <th>
                 @Html.DisplayNameFor(model => model.Dep_Descripcion)
             </th>
-           
-           
-            
-        
-           
+
+
+
+
+
             <th> Acciones</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Dep_Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Dep_Descripcion)
-                </td>
-               
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>
-            </tr>
-        }
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Dep_Id)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Dep_Descripcion)
+    </td>
+
+    <td style="width: 5%">
+        <div class="w-100" style="max-width: 250px">
+            <div class="d-flex w-100" style="gap: 5px;">
+                <button class="btn btn-outline-warning btn-sm editar-depa" data-depa-id="@item.Dep_Id"><i class="fas fa-edit"></i>Editar</button>
+
+                @*<a class="d-flex align-items-center btn-secondary" style="max-width: 100px" href="@Url.Action("_Details", new { id=item.Dep_Id })">
+                <i class="bi bi-eye"></i>
+        @<a href="@Url.Action("_Details", "Departamento", new { Dep_Id = item.Dep_Id })" class="btn btn-info btn-sm">Detallees <i class="tim-icons icon-zoom-split"></i></a>@
+
+                Detalles
+            </a>*@@*<div>
+            @Html.ActionLink("Details", "Departamento", new { id = Model.FirstOrDefault()?.Dep_Id }, new { @class = "btn btn-info btnVerDetalles" })
+        </div>*@
+            <a href="@Url.Action("Details", "DepartamentoController1", new { Dep_Id = item.Dep_Id })" class="btn btn-outline-primary  btn-sm">Detalles <i class="tim-icons icon-zoom-split"></i></a>
+
+            <button class="d-flex align-items-center justify-content-around btn btn-outline-danger btn-sm flex-grow-1" style="max-width: 100px" onclick="Eliminar('@item.Dep_Id')">
+                <i class="bi bi-trash-fill"></i>
+                Eliminar
+            </button>
+            </div>
+        </div>
+</tr>}
     </tbody>
 </table>
+
+
+
+<div class="modal fade" id="modalEditar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                @Html.Partial("_Edit", new FrontendCNE.Models.DepartamentoViewModel())
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="ModalCrear" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-body">
+                @Html.Partial("_Create", new FrontendCNE.Models.DepartamentoViewModel())
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                @Html.Partial("_Delete", new FrontendCNE.Models.DepartamentoViewModel())
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <script src="~../../lib/jquery/dist/jquery.min.js"></script>
 
 <script src="~../../js/dataTables.min.js"></script>
@@ -62,14 +119,62 @@
         $('#ModalCrear').modal('show')
 
     });
+
+
+
+    //$('.btnEditar').click(function () {
+    //    var id = $(this).data("id");
+
+    //    $.ajax({
+    //        url: /Departamento/Edit/${id},
+    //        method: "GET",
+    //        success: function (departamento) {
+    //            console.log("Entro")
+
+    //            console.log(departamento, "departamento")
+    //            $('#id').val(departamento.dep_Id);
+    //            $('#Descripcion').val(departamento.dep_Descripcion);
+    //        },
+    //        error: function (jqXHR, textStatus, errorThrown) {
+    //            console.error("Error al cargar los datos del departamento:", errorThrown);
+    //        }
+    //    });
+    //    $('#modalEditar').modal('show');
+    //});
+
+
+    $(".editar-depa").click(function () {
+        $('#modalEditar').modal('show');
+    });
+
+
+    $(".editar-depa").click(function () {
+        var id = $(this).data("depa-id");
+        var url = "https://localhost:44377/API/Departamento/Fill/" + id;
+        fetch(url).then(function (result) {
+            if (result.ok) {
+                return result.json();
+            }
+        }).then(function (data) {
+            console.log(data.data);
+            var datos = data.data
+            console.log("hola");
+
+            //var depa = datos[0];
+            var id = datos.dep_Id
+            var descripcion = datos.dep_Descripcion;
+
+            console.log(descripcion);
+            $("#id").val(id);
+            $("#Dep_Descripcion").val(descripcion);
+
+        });
+    });
+
+
+    function Eliminar(id) {
+        $("#inputHidden").val(id);
+        localStorage.setItem("inputHidden", id);
+        $('#modalEliminar').modal('show');
+    }
 </script>
-<div class="modal fade" id="ModalCrear" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            
-            <div class="modal-body">
-                @Html.Partial("_Create", new FrontendCNE.Models.DepartamentoViewModel())
-            </div>
-        </div>
-    </div>
-</div>
