--- a/FrontendCNE/FrontendCNE/Views/DepartamentoController1/_Create.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/DepartamentoController1/_Create.cshtml
@@ -1,8 +1,6 @@
 ﻿@model FrontendCNE.Models.DepartamentoViewModel
-@{
-    ViewData["Title"] = "tbDepartamentos".Substring(2);
-    ViewData["ViewName"] = "_Create".Substring(1);
-}
+@{ ViewData["Title"] = "tbDepartamentos".Substring(2);
+                ViewData["ViewName"] = "_Create".Substring(1); }
 <h4>Agregar Departamento</h4>
 <hr />
 <div class="row">
