--- a/FrontendCNE/FrontendCNE/Views/Votacion/Presidentes.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/Votacion/Presidentes.cshtml
@@ -39,7 +39,8 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <button class="btn btn-block btn-primary btn-lg" @*onclick="terminarVotacion()"*@>VOTAR</button>
+                                            @Html.Partial("~/Views/Votacion/_Create.cshtml", new FrontendCNE.Models.VotoViewModel())
+                                           
                                         </div>
                                     </div>
 
@@ -182,17 +183,16 @@
 
         $(document).on('click', 'input:checkbox', function (event) {
 
-
             var $box = $(this);
 
             idcandidato = $box.data("idcandidato");
+            console.log(idcandidato);
+            $("#Pre_Id").val(idcandidato)
+            $("#Mes_Id").val(1)
+            $("#Alc_Id").val(1)
 
             if ($box.is(":checked")) {
-                // the name of the box is retrieved using the .attr() method
-                // as it is assumed and expected to be immutable
                 var group = "input:checkbox[name='" + $box.attr("name") + "']";
-                // the checked state of the group/box on the other hand will change
-                // and the current value is retrieved using .prop() method
                 $(group).prop("checked", false);
                 $box.prop("checked", true);
             } else {
