--- a/FrontendCNE/FrontendCNE/Views/Shared/_Layout.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/Shared/_Layout.cshtml
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CelestialUI Admin</title>
     <!-- base:css -->
-    <link rel="stylesheet" href="~../../vendors/typicons.font/font/typicons.css">
-    <link rel="stylesheet" href="~../../vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="~/vendors/typicons.font/font/typicons.css">
+    <link rel="stylesheet" href="~/vendors/css/vendor.bundle.base.css">
     <!-- endinject -->
     <!-- plugin css for this page -->
     <!-- End plugin css for this page -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="~../../css/vertical-layout-light/style.css">
-    <link rel="stylesheet" href="~../../css/dataTables.dataTables.min.css">
+    <link rel="stylesheet" href="~/css/vertical-layout-light/style.css">
+    <link rel="stylesheet" href="~/css/dataTables.dataTables.min.css">
     <!-- endinject -->
-    <link rel="shortcut icon" href="~../../images/favicon.png" />
+    <link rel="shortcut icon" href="~/images/favicon.png" />
 </head>
 <body>
     <div class="row" id="proBanner">
@@ -27,8 +27,8 @@
         <!-- partial:partials/_navbar.html -->
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                <a class="navbar-brand brand-logo" href="index.html"><img src="~../../images/consejo-nacional-electoral-seeklogo.svg" alt="logo" /></a>
-                <a class="navbar-brand brand-logo-mini" href="index.html"><img src="~../../images/logo-mini.svg" alt="logo" /></a>
+                <a class="navbar-brand brand-logo" href="index.html"><img src="~/images/consejo-nacional-electoral-seeklogo.svg" alt="logo" /></a>
+                <a class="navbar-brand brand-logo-mini" href="index.html"><img src="~/images/logo-mini.svg" alt="logo" /></a>
                 <button class="navbar-toggler navbar-toggler align-self-center d-none d-lg-flex" type="button" data-toggle="minimize">
                     <span class="typcn typcn-th-menu"></span>
                 </button>
@@ -66,7 +66,7 @@
                     <li class="nav-item">
                         <div class="d-flex sidebar-profile">
                             <div class="sidebar-profile-image">
-                                <img src="~../../images/faces/face29.png" alt="image">
+                                <img src="~/images/faces/face29.png" alt="image">
                                 <span class="sidebar-status-indicator"></span>
                             </div>
                             <div class="sidebar-profile-name">
@@ -162,20 +162,20 @@
     </div>
     <!-- container-scroller -->
     <!-- base:js -->
-    <script src="~../../vendors/js/vendor.bundle.base.js"></script>
+    <script src="~/vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page-->
     <!-- End plugin js for this page-->
     <!-- inject:js -->
-    <script src="~../../js/off-canvas.js"></script>
-    <script src="~../../js/hoverable-collapse.js"></script>
-    <script src="~../../js/template.js"></script>
-    <script src="~../../js/settings.js"></script>
-    <script src="~../../js/todolist.js"></script>
+    <script src="~/js/off-canvas.js"></script>
+    <script src="~/js/hoverable-collapse.js"></script>
+    <script src="~/js/template.js"></script>
+    <script src="~/js/settings.js"></script>
+    <script src="~/js/todolist.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- endinject -->
     <!-- plugin js for this page -->
-    <script src="~../../vendors/progressbar.js/progressbar.min.js"></script>
+    <script src="~/vendors/progressbar.js/progressbar.min.js"></script>
     <!-- <script src="vendors/chart.js/Chart.min.js"></script> -->
     <!-- End plugin js for this page -->
     <!-- Custom js for this page-->
