--- a/FrontendCNE/FrontendCNE/Views/DepartamentoController1/Details.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/DepartamentoController1/Details.cshtml
@@ -1,64 +1,58 @@
 ﻿@model FrontendCNE.Models.DepartamentoViewModel
 
-@{
-    ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewData["Title"] = "Details";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <h1>Details</h1>
 
-<div>
-    <h4>DepartamentoViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dep_Id)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dep_Id)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dep_Descripcion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dep_Descripcion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dep_UsuarioCreacion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dep_UsuarioCreacion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dep_FechaCreacion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dep_FechaCreacion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dep_UsuarioModificacion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dep_UsuarioModificacion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Dep_FechaModificacion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Dep_FechaModificacion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Depar_Estado)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Depar_Estado)
-        </dd>
-    </dl>
-</div>
-<div>
+<div class="card">
+    <div class="card-header">
+        <h5>Detalle</h5>
+    </div>
+    <div class="card-body">
 
-    <a asp-action="Index">Back to List</a>
-</div>
-<script src="~../../lib/jquery/dist/jquery.min.js"></script>
+        <div class="container-sm">
+            <div class="row">
+                <div class="col-md-4">
+                    <strong>@Html.DisplayNameFor(model => model.Dep_Descripcion)</strong>
+                </div>
+                <div class="col-md-4">
+                    <strong>@Html.DisplayNameFor(model => model.Dep_Id)</strong>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.Dep_Descripcion)
+                </div>
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.Dep_Id)
+                </div>
+            </div>
+        </div>
 
-<script src="~../../js/dataTables.min.js"></script>
+        <h5 class="card-title mt-5">Auditoria</h5>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Acción</th>
+                    <th>Usuario</th>
+                    <th>Fecha</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Creación</td>
+                    <td>@Html.DisplayFor(model => model.Dep_UsuarioCreacion)</td>
+                    <td>@Html.DisplayFor(model => model.Dep_FechaCreacion)</td>
+                </tr>
+                <tr>
+                    <td>Modificación</td>
+                    <td>@Html.DisplayFor(model => model.Dep_UsuarioModificacion)</td>
+                    <td>@Html.DisplayFor(model => model.Dep_FechaModificacion)</td>
+                </tr>
+            </tbody>
+        </table>
+        <a asp-controller="Departamento" asp-action="Index" class="btn btn-primary">Regresar</a>
+
+    </div>
+</div>
