--- a/FrontendCNE/FrontendCNE/Views/Votacion/_Create.cshtml
+++ b/FrontendCNE/FrontendCNE/Views/Votacion/_Create.cshtml
@@ -24,8 +24,13 @@
                 <input asp-for="Alc_Id" class="form-control" />
                 <span asp-validation-for="Alc_Id" class="text-danger"></span>
             </div>
+            <div class="form-group" hidden>
+                <label asp-for="dni" class="control-label"></label>
+                <input asp-for="dni" class="form-control" value="" />
+                <span asp-validation-for="dni" class="text-danger"></span>
+            </div>
             <div class="form-group">
-                <input type="submit" value="Votar" class="btn btn-primary" />
+                <input type="submit" value="Votar" id="Vot" name="vot" class="btn btn-primary" />
             </div>
         </form>
     </div>
